--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,10 +5,12 @@
     <a href="/campgrounds/new">Add Campground</a>
 </div>
 <% for (let campground of campgrounds){%>
-<div class="card" mb-3>
+<div class="card mb-3">
     <div class="row">
         <div class="col-md-4">
-            <img class="img-fluid" alt="" src="<%=campground.image%>">
+            <% if (campground.images.length) { %>
+                <img class="img" alt="" src="<%=campground.images[0].url%>" width="365" height="304.05">
+            <% } %>
         </div>
         <div class="col-md-8">
             <div class="card-body">
