--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -71,7 +71,6 @@
                 <button class="btn btn-info">Update Campground</button>
             </div>
         </form>
-        <a href="/campgrounds/<%= campground._id%>">Back To Campground</a>
-
+        <a class="btn btn-danger mb-3" href="/campgrounds/<%= campground._id%>">Back To Campground</a>
     </div>
 </div>
