--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,7 +2,8 @@
 
 <h1>All Campgrounds</h1>
 <div>
-    <a href="/campgrounds/new">Add Campground</a>
+    <!-- <a href="/campgrounds/new">Add New!</a> -->
+    <a class="btn btn-primary mb-3" href="/campgrounds/new">Add New!</a>
 </div>
 <% for (let campground of campgrounds){%>
 <div class="card mb-3">
