--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -58,6 +58,7 @@
                 <button class="btn btn-success">Add Campground</button>
             </div>
         </form>
-        <a href="/campgrounds">All Campgrounds</a>
+        <a class="btn btn-danger mb-3" href="/campgrounds">All Campgrounds</a>
+        <!-- <a href="/campgrounds">All Campgrounds</a> -->
     </div>
 </div>
