--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,10 +1,11 @@
 <% layout('layouts/boilerplate')%>
 
-<h1>All Campgrounds</h1>
+
 <div>
     <!-- <a href="/campgrounds/new">Add New!</a> -->
-    <a class="btn btn-primary mb-3" href="/campgrounds/new">Add New!</a>
+    <a class="btn btn-primary mt-2 mb-3" href="/campgrounds/new">Add Your Home Town!</a>
 </div>
+<h1>Recent Posts on the nexTrip</h1>
 <% for (let campground of campgrounds){%>
 <div class="card mb-3">
     <div class="row">
@@ -16,11 +17,10 @@
         <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title"><%= campground.title %> </h5>
-                <p class="card-text"><%= campground.description %></p>
                 <p class="card-text">
                     <small class="text-muted"><%= campground.location%></small>
                 </p>
-                <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View <%=campground.title%></a>
+                <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">See Details</a>
             </div>
         </div>
     </div>
